--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -4,10 +4,11 @@ NETWORK_PASSPHRASE="Public Global Stellar Network ; September 2015"
 FEDERATION_SERVER="https://api.stellar.org/federation"
 AUTH_SERVER="https://api.stellar.org/auth"
 TRANSFER_SERVER="https://api.stellar.org/auth"
-SIGNING_KEY="GAXAYQDQWFRTZFC5W6Y7ZITGCIOO5TRK5VZDZLASBIBBQMCNQND4WNTV"
+SIGNING_KEY="GDDBWGSAEG4OXKCHJCKPI2LDMYHOTHR4NPKJSBR7FQVQZKAPNVJ324KE"
 HORIZON_URL="https://horizon.stellar.org"
 
-ACCOUNTS=["GAXAYQDQWFRTZFC5W6Y7ZITGCIOO5TRK5VZDZLASBIBBQMCNQND4WNTV"]
+ACCOUNTS=["GACJHFU3IAV2IYUQ5PLNA4TJQJHAFKFCCOWZVYSBG4RBEEHMH7P3E4CF",
+"GDDBWGSAEG4OXKCHJCKPI2LDMYHOTHR4NPKJSBR7FQVQZKAPNVJ324KE"]
 
 
 [DOCUMENTATION]
