--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -8,14 +8,15 @@ SIGNING_KEY="GDDBWGSAEG4OXKCHJCKPI2LDMYHOTHR4NPKJSBR7FQVQZKAPNVJ324KE"
 HORIZON_URL="https://horizon.stellar.org"
 
 ACCOUNTS=["GACJHFU3IAV2IYUQ5PLNA4TJQJHAFKFCCOWZVYSBG4RBEEHMH7P3E4CF",
-"GDDBWGSAEG4OXKCHJCKPI2LDMYHOTHR4NPKJSBR7FQVQZKAPNVJ324KE"]
+"GDDBWGSAEG4OXKCHJCKPI2LDMYHOTHR4NPKJSBR7FQVQZKAPNVJ324KE",
+"GAOHXQHKM2F5YW7XOTBOOUCNOE5P5G6OUBJJWZP7AA3G3JD3DYDCNZJY"]
 
 
 [DOCUMENTATION]
 
 ORG_NAME="Luxury Yacht Coin"
 ORG_URL="https://umbrella-intwaters.pages.dev/"
-ORG_LOGO=""
+ORG_LOGO="https://umbrella-intwaters.pages.dev/logo.jpg"
 ORG_DESCRIPTION=""
 
 
