--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -16,7 +16,7 @@ ACCOUNTS=["GACJHFU3IAV2IYUQ5PLNA4TJQJHAFKFCCOWZVYSBG4RBEEHMH7P3E4CF",
 
 ORG_NAME="Luxury Yacht Coin"
 ORG_URL="https://umbrella-intwaters.pages.dev/"
-ORG_LOGO="https://umbrella-intwaters.pages.dev/logo.jpg"
+ORG_LOGO="https://umbrella-intwaters.pages.dev/PSX_20220803_155454.jpg"
 ORG_DESCRIPTION=""
 
 
