--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -17,7 +17,7 @@ ACCOUNTS=["GACJHFU3IAV2IYUQ5PLNA4TJQJHAFKFCCOWZVYSBG4RBEEHMH7P3E4CF",
 ORG_NAME="Luxury Yacht Coin"
 ORG_URL="https://umbrella-intwaters.pages.dev/"
 ORG_LOGO="https://umbrella-intwaters.pages.dev/PSX_20220803_155454.jpg"
-ORG_DESCRIPTION=""
+ORG_DESCRIPTION="Fungible cryptocurrency"
 
 
 
@@ -36,7 +36,7 @@ ORG_PHONE_NUMBER=""
 ORG_PHONE_NUMBER_ATTESTATION=""
 ORG_KEYBASE="YHTS7S"
 ORG_TWITTER=""
-ORG_GITHUB=""
+ORG_GITHUB="https://umbrella-intwaters.pages.dev"
 ORG_OFFICIAL_EMAIL=""
 
 [[PRINCIPALS]]
