--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -118,3 +118,13 @@ conditions="Verified mint. Active burn policy. Issuer may mint additional tokens
 image="https://umbrella-intwaters.pages.dev/h.jpg"
 
 fixed_number="1000000000"
+[[CURRENCIES]]
+code="LVMREIT"
+issuer="GBBT7SR6TODAKWJDG3NJEARPRQEDKO6AAR35Q36YQZP6367FQASLLW3F"
+display_decimals=4
+attestation_of_reserve="https://stellar.expert/explorer/public/market?asset=LVMREIT-GBBT7SR6TODAKWJDG3NJEARPRQEDKO6AAR35Q36YQZP6367FQASLLW3F"
+name="LVMREIT"
+desc="Fungible utility token."
+conditions="Verified mint. Active burn policy. Issuer may mint additional tokens."
+image="https://umbrella-intwaters.pages.dev/lvmreit.jpg"
+fixed_number="1"
