--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -9,7 +9,9 @@ HORIZON_URL="https://horizon.stellar.org"
 
 ACCOUNTS=["GACJHFU3IAV2IYUQ5PLNA4TJQJHAFKFCCOWZVYSBG4RBEEHMH7P3E4CF",
 "GDDBWGSAEG4OXKCHJCKPI2LDMYHOTHR4NPKJSBR7FQVQZKAPNVJ324KE",
-"GAOHXQHKM2F5YW7XOTBOOUCNOE5P5G6OUBJJWZP7AA3G3JD3DYDCNZJY"]
+"GAOHXQHKM2F5YW7XOTBOOUCNOE5P5G6OUBJJWZP7AA3G3JD3DYDCNZJY",
+"GAVQSEMZKXHYRQSIAEDZ7XG2ANU2WMGLDED4NB34Q7MKMXRBFZHKMW7Z",
+"GDO6ZJO6TRDGW5BP3H3MNICDTWL4WS45Y3BZCN4D42VM5RC6NIXLYWLX"]
 
 
 [DOCUMENTATION]
