--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -36,7 +36,7 @@ ORG_PHYSICAL_ADDRESS="United States"
 ORG_PHYSICAL_ADDRESS_ATTESTATION=""
 ORG_PHONE_NUMBER=""
 ORG_PHONE_NUMBER_ATTESTATION=""
-ORG_KEYBASE="YHTS7S"
+ORG_KEYBASE="YHTS7S*keybase.io"
 ORG_TWITTER=""
 ORG_GITHUB="https://umbrella-intwaters.pages.dev"
 ORG_OFFICIAL_EMAIL=""
