--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -97,7 +97,7 @@ code="AQUAPODASSOC"
 issuer="GBBT7SR6TODAKWJDG3NJEARPRQEDKO6AAR35Q36YQZP6367FQASLLW3F"
 display_decimals=4
 attestation_of_reserve="https://stellar.expert/explorer/public/asset/AQUAPODASSOC-GBBT7SR6TODAKWJDG3NJEARPRQEDKO6AAR35Q36YQZP6367FQASLLW3F?filter=markets&market=SDEXEX-GBQHMDRWV3WU5YACBUUCBY4Y6PPWBJXW5WCSG5XJ63FC4HXJNGXYFD5J-2"
-name="Aquapod Associatuon"
+name="Aquapod Association"
 desc="Fungible utility token."
 conditions="Verified mint. Active burn policy. Issuer may mint additional tokens."
 image="https://umbrella-intwaters.pages.dev/aquapod.jpg"
