--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -130,3 +130,12 @@ desc="Fungible utility token."
 conditions="Verified mint. Active burn policy. Issuer may mint additional tokens."
 image="https://umbrella-intwaters.pages.dev/lvmreit.jpg"
 fixed_number="1"
+[[CURRENCIES]]
+code="LVMREIT"
+issuer="GBBT7SR6TODAKWJDG3NJEARPRQEDKO6AAR35Q36YQZP6367FQASLLW3F"
+display_decimals=4
+attestation_of_reserve="https://stellar.expert/explorer/public/asset/HydroS-GBOT345OICAFBOVOB5AZFDSNE5ASVJQYZK5S4K3C6ZK3NZN7YJW27GSP-2?filter=markets&market=XRP-GBPG6EPK77NYTE5ETIW2NWB6TNAPCURDTYGGZABZQOINT2TQHG42KDKE-1"
+name="HydroS"
+desc="Fungible utility token."
+conditions="Verified mint. Active burn policy. Issuer may mint additional tokens."
+image="https://umbrella-intwaters.pages.dev/hy.jpg"
