--- a/.well-known/stellar.toml
+++ b/.well-known/stellar.toml
@@ -146,7 +146,7 @@ image="https://umbrella-intwaters.pages.dev/hy.jpg"
 code="QVIIS"
 issuer="GCWDIWJCFUW2ZBF4V4PUJFQBOGDWN7HK2RTNNVLBHY5R4CFBP27HE432"
 display_decimals=4
-attestation_of_reserve="name="https://stellar.expert/explorer/public/market?asset=QVIIS-GCWDIWJCFUW2ZBF4V4PUJFQBOGDWN7HK2RTNNVLBHY5R4CFBP27HE432"
+attestation_of_reserve="https://stellar.expert/explorer/public/market?asset=QVIIS-GCWDIWJCFUW2ZBF4V4PUJFQBOGDWN7HK2RTNNVLBHY5R4CFBP27HE432"
 name="Quintoria Solen VII"
 desc="Fungible utility token."
 conditions="Verified mint. Active burn policy. Issuer may mint additional tokens."
